fix: layout issue

--- a/app/assets/stylesheets/components/_fonts.scss
+++ b/app/assets/stylesheets/components/_fonts.scss
@@ -1,7 +1,8 @@
 h1 {
   font-family: 'League Spartan', sans-serif !important;
   font-weight: 700;
-  text-align: center
+  text-align: center;
+  color: #03989E;
 }
 
 h2 {
